# dyros_avatar_haptic

dyros_avatar_haptic_controller/: CMakeLists.txt  package.xml
dyros_avatar_haptic_controller/launch/: simulation.launch
dyros_avatar_haptic_controller/src/: controller.cpp  main.cpp  mujoco_interface.cpp
dyros_avatar_haptic_description/: CMakeLists.txt  README.md  package.xml
dyros_avatar_haptic_description/meshes/: L0v1_1_reduced.stl  L0v2_1_reduced.stl  L1v2_1_reduced.stl  L2_Newv4_1_reduced.stl  L2v2_1_reduced.stl  L3_Newv3_1_reduced.stl  L3v2_1_reduced.stl  L4v2_1_reduced.stl  L4v5_1_reduced.stl  L5v6_1_reduced.stl  L6v2_1.stl  L6v5_1.stl  L6v5_1_reduced.stl  R2_Newv6_1_reduced.stl  R2v2_1_reduced.stl  R3_Newv2_1_reduced.stl  R3v2_1_reduced.stl  R4v1_1_reduced.stl  R4v2_1_reduced.stl  R5v3_1_reduced.stl  R6v1_1.stl  R6v1_1_reduced.stl  link_02v1_1_3dless_com_simplified.stl  link_04v1_1_3dless_com_simplified.stl  link_06v1_1.stl
dyros_avatar_haptic_description/meshes/new/: L6v5_1.stl
dyros_avatar_haptic_description/robots/: dyros_avatar_haptic.urdf  dyros_avatar_haptic.xml  dyros_avatar_haptic_tmp.xml  link_01v1_1_3dless_com_simplified.stl  link_03v1_1_3dless_com_simplified.stl
dyros_avatar_haptic_description/urdf/: dyros_avatar_haptic.urdf  dyros_avatar_haptic_both.urdf  dyros_avatar_haptic_left.urdf  dyros_avatar_haptic_right.urdf
dyros_avatar_haptic_description/xml/: dyros_avatar_haptic.xml  dyros_avatar_haptic_both.xml  dyros_avatar_haptic_both_final.xml  dyros_avatar_haptic_both_new.xml
(+3 files in other folders)
