<?xml version="1.0"?>
<package format="2">
  <name>dyros_avatar_haptic_description</name>
  <version>0.0.0</version>
  <description>The dyros_avatar_haptic_description package</description>

  <maintainer email="suhan@todo.todo">suhan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
